guaranteed-rate-webserver-template.yaml

Parameters:
  InstanceType:
    Description: EC2 instance type.
    Type: String
    Default: t2.micro
  KeyName:
    Description: Name of an existing EC2 key pair for SSH access to the EC2 instance.
    Type: AWS::EC2::KeyPair::KeyName
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 24.5.253.104/32
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  ImageId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
  PublicSubnet1:
    Type: String
    Default: subnet-0f0fd3b2f0073f62e
  VpcId:
    Type: String
    Default: vpc-0bbdab4e5e3678c99

Resources:
  WebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref ImageId
      InstanceType: !Ref InstanceType 
      KeyName: !Ref KeyName
      SubnetId: !Ref PublicSubnet1
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      UserData:
        Fn::Base64:  !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          echo "Hello GR World" > /var/www/html/index.html
      Tags:
        - Key: Name
          Value: “guaranteed-rate-webserver”

  StaticIPAddress:
      Type: AWS::EC2::EIP

  IPAssoc:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref WebServer
      EIP: !Ref StaticIPAddress
        
  WebServerSecurityGroup: # security group ID
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Enable HTTP access via port 80 + SSH access'
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: '80'
          IpProtocol: tcp
          ToPort: '80'
        - CidrIp: !Ref SSHLocation
          FromPort: '22'
          IpProtocol: tcp
          ToPort: '22'
      VpcId: !Ref VpcId

Outputs:
#   InstanceId:
#     Description: InstanceId of the newly created EC2 instance
#     Value: !GetAtt WebServer.PublicIp # return the ip addr
  InstanceId:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref WebServer
  InstanceIPAddress:
    Description: IP address of the newly created EC2 instance
    Value: !Ref StaticIPAddress
